syntax = "proto3";

package users;
option go_package = "github.com/galexrt/arpanet/proto/services/users;users";

import "validate/validate.proto";
import "resources/common/database/database.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";

message FindUsersRequest {
    int64 offset = 1;
    repeated resources.common.database.OrderBy orderBy = 2;
    // Search params
    string firstname = 3;
    string lastname = 4;
    bool wanted = 5;
}

message FindUsersResponse {
    int64 totalCount = 1;
    int64 offset = 2;
    int64 end = 3;
    repeated resources.users.User users = 4;
}

message GetUserRequest {
    int32 userID = 1 [(validate.rules).int32.gt = 0];
}

message GetUserResponse {
    resources.users.User user = 1;
}

message GetUserActivityRequest {
    int32 userID = 1 [(validate.rules).int32.gt = 0];
}

message GetUserActivityResponse {
    repeated resources.users.UserActivity activity = 1;
}

message SetUserPropsRequest {
    int32 userID = 1 [(validate.rules).int32.gt = 0];
    optional bool wanted = 2;
}

message SetUserPropsResponse {
}

service UsersService {
    rpc FindUsers(FindUsersRequest) returns (FindUsersResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc GetUserActivity(GetUserActivityRequest) returns (GetUserActivityResponse);
    rpc SetUserProps(SetUserPropsRequest) returns (SetUserPropsResponse);
}
